<resources>
    <string name="app_name">Autobot Charge</string>
    <string name="m2_parse_error_msg">Failed to parse data</string>
    <string name="m3_bad_network_msg">Internet problem</string>
    <string name="m4_connect_error_msg">Connection error</string>
    <string name="m5_connect_timeout_msg">Connection time out</string>
    <string name="m6_other_msg">Unknown mistake</string>
    <string name="m1_welcom_erperience">Welcome to use Autobot Charge charger super erperience</string>
    <string name="m2_timxon">Autobot Charge APP helps you easily manage and monitor the charger</string>
    <string name="m3_forget_password">Forgot password</string>
    <string name="m4_login">Sign in</string>
    <string name="m5_experience_hall">Experience Hall</string>
    <string name="m6_register">Sign up</string>
    <string name="m7_username">Username</string>
    <string name="m8_mailbox">Mailbox</string>
    <string name="m9_phone">Phone</string>
    <string name="m10_accept_policy">Accept terms and data privacy policy</string>
    <string name="m11_charge_id">Charger ID:</string>
    <string name="m12_loading">loading...</string>
    <string name="m13_loading_error_please_click_retry">load fail,try again...</string>
    <string name="m14_all_page_loading_finish">load success</string>
    <string name="m15_please_select">select</string>
    <string name="m16_cancel">cancel</string>
    <string name="m17_select_unit">select unit</string>
    <string name="m18_confirm">confirm</string>
    <string name="m19_disagree">Cancel</string>
    <string name="m20_agree">Ok</string>
    <string name="m21_user_agreement_and_privacy_policy">User Agreement and Privacy Policy</string>
    <string name="m22_privacy_dialog_tip">ou can\'t provide services unless you agree to the agreement</string>
    <string name="m23_user_agreement">《User Agreement》</string>
    <string name="m24_privacy_policy">《Privacy Policy》</string>
    <string name="m25_click_agree">Click Agree to indicate that you have read and agree%s&amp;%s。</string>
    <string name="m26_privacy_dialog_content">Enerview is designed to protect your data privacy with security based on helping you efficiently manage power plants. Please read and fully understand the terms and conditions before clicking agree.</string>
    <string name="m27_web">Web</string>
    <string name="m28_guide1">Welcome to use Autobot Charge carger super erperience</string>
    <string name="m29_guide2">Add your charger</string>
    <string name="m30_guide3">Configure the network</string>
    <string name="m31_guide4">Regist era user</string>
    <string name="m32_tips1">Autobot Charge APP helps you easily manage and monitor the charger</string>
    <string name="m33_tips2">Scan code or enter SN to add charger</string>
    <string name="m34_tips3">Configure your charger setting and connectivity with APP</string>
    <string name="m35_tips4">Register a user,password,email verification</string>
    <string name="m36_tip">Tips</string>
    <string name="m37_need_to_open_location_service">The location service needs to be enabled</string>
    <string name="m38_setting">Setting</string>
    <string name="m39_please_to_setting_page_location_service">Please go to the settings page to open the location service</string>
    <string name="m40_scan">scan</string>
    <string name="m41_network_error">Network exception. Please try again later</string>
    <string name="m42_loading_error">Loading exception, please try again later</string>
    <string name="m43_loading_error_click_retry">Loading exception, please click Retry</string>
    <string name="m44_map_for_choosing">Map point selection</string>
    <string name="m45_longitude_format">longitude:%s</string>
    <string name="m46_latitude_format">latitude:%s</string>
    <string name="m47_app_want_to_visit_format">"%s"Want to visit your%s</string>
    <string name="m48_camera">camera</string>
    <string name="m49_photo_album">album</string>
    <string name="m50_location">location</string>
    <string name="m51_to_app_set_permission_format">您未允许%s获得你的%s权限，您可在应用设置中开启</string>
    <string name="m52_camera">camera</string>
    <string name="m53_photo_album">album</string>
    <string name="m54_storage_photo_album">Storage (photo album)</string>
    <string name="m55_to_set">set</string>
    <string name="m56_kwh">kWh</string>
    <string name="m57_mwh">MWh</string>
    <string name="m58_kwp">kWp</string>
    <string name="m59_mwp">MWp</string>
    <string name="m60_kw">kW</string>
    <string name="m61_mw">MW</string>
    <string name="m62_hz">Hz</string>
    <string name="m63_kva">KVA</string>
    <string name="m64_kvar">KVar</string>
    <string name="m65_v">V</string>
    <string name="m66_a">A</string>
    <string name="m67_kg">kg</string>
    <string name="m68_t">t</string>
    <string name="m69_hour">hour</string>
    <string name="m70_day">date</string>
    <string name="m71_month">monyear</string>
    <string name="m72_year">year</string>
    <string name="m73_sms_find_back">Message back</string>
    <string name="m74_please_input_username">Please enter a user name</string>
    <string name="m75_please_input_password">enter your password</string>
    <string name="m76_password_cant_empty">The password cannot be empty</string>
    <string name="m77_password">Password</string>
    <string name="m77_re_enter_password">Repeat Password</string>
    <string name="m78_city">City</string>
    <string name="m79_country">Country</string>
    <string name="m80_time_zone">Time Zone</string>
    <string name="m81_please_check_agree_agreement">Please check Agree Agreement</string>
    <string name="m82_password_cant_empty">The password cannot be empty</string>
    <string name="m83_passwords_are_inconsistent">The two passwords are different</string>
    <string name="m84_password_cannot_be_less_than_6_digits">The password must be at least six digits long</string>
    <string name="m85_no_phone_number">No mobile phone number was entered</string>
    <string name="m86_no_timezone">Time zone not specified</string>
    <string name="m87_no_country">Country not entered</string>
    <string name="m88_agree_company_user_agreement">%s&amp;%s</string>
    <string name="m89_no_email">Email not filled in</string>
    <string name="m90_register_success">Registered successfully</string>
    <string name="m91_charge_setting">Charge Setting</string>
    <string name="m92_energy">Energy</string>
    <string name="m93_current">Current</string>
    <string name="m94_voltage">Voltage</string>
    <string name="m95_consumption">Consumption</string>
    <string name="m96_charge_time">Charge Time</string>
    <string name="m97_please_add_charge">Please Add Charger</string>
    <string name="m98_no_online">not online</string>
    <string name="m93_unavailable">unavailable</string>
    <string name="m94_available">Available</string>
    <string name="m95_prepear">preparing</string>
    <string name="m96_charging">Charging…</string>
    <string name="m97_car_stop">car stop charging</string>
    <string name="m98_charge_finish">charging finish</string>
    <string name="m99_reservce">reserving…</string>
    <string name="m100_unavailable1">offline</string>
    <string name="m101_fault">error</string>
    <string name="m102_device_stop">charger unavailable</string>
    <string name="m103_unlock_gun">unlock</string>
    <string name="m104_unlock_gun_tips">Are you sure you want to unlock the plug？</string>
    <string name="m105_unlock_success">unlock success</string>
    <string name="m106_unlock_fail">unlock fail</string>
    <string name="m107_logout">Logout</string>
    <string name="m108_add_your_charge">Add charger</string>
    <string name="m109_authorize">Authorize to other users</string>
    <string name="m110_personal_info">User Information</string>
    <string name="m111_help_support">Support</string>
    <string name="m112_other">Other</string>
    <string name="m113_enter_serial">Please enter the charger serial number</string>
    <string name="m114_add">Add</string>
    <string name="m115_scan_code">Scan code to Add</string>
    <string name="m116_sn_not_null">No. Not Empty</string>
    <string name="m117_record">Record</string>
    <string name="m118_electricity">Electricity</string>
    <string name="m119_time">Time</string>
    <string name="m120_money">cost</string>
    <string name="m121_norecord">not record</string>
    <string name="m122_bluetooth_connection">Bluetooth Connection</string>
    <string name="m123_wifi_account">WIFI Account</string>
    <string name="m124_wifi_password">WIFI Password</string>
    <string name="m125_charger_setting">Charger Setting</string>
    <string name="m126_done">Done</string>
    <string name="m127_try_now">Experience immediately</string>
    <string name="m128_power">Power</string>
    <string name="m129_rate">Set Charging Rate</string>
    <string name="m130_confirm">Ok</string>
    <string name="m131_set_success">success</string>
    <string name="m132_set_fail">fail</string>
    <string name="m133_rate_not_null">charge rate not enpty~</string>
    <string name="m134_auth">Charger Authorization</string>
    <string name="m135_delete">Delete</string>
    <string name="m136_choose">Select a Charge Point</string>
    <string name="m137_add_success">Add Success</string>
    <string name="m138_add_fail">Add Fail</string>
    <string name="m139_change_password">Modify Password</string>
    <string name="m140_mailbox">Mailbox</string>
    <string name="m141_card_model1">Card Model 1</string>
    <string name="m142_card_model2">Card Model 2</string>
    <string name="m143_support_email">Support email</string>
    <string name="m144_support_phone">Support Phone</string>
    <string name="m145_support_time">Support time</string>
    <string name="m146_feedback">Feedback</string>
    <string name="m147_version_information">Version Information</string>
    <string name="m148_privacy_agreement">User data privacy agreement</string>
    <string name="m149_delete_account">Delete account</string>
    <string name="m150_old_password">Old Password</string>
    <string name="m151_new_password">New Password</string>
    <string name="m152_new_password_again">Enter the new password again</string>
    <string name="m153_email">Email</string>
    <string name="m154_delete_charge">Delete charge</string>
    <string name="m155_delete_tips">Are you sure you want to delete the charge？</string>
    <string name="m156_take_photo">Take a photo</string>
    <string name="m157_select_album">Select from album</string>
    <string name="m158_send_verify_code">Send verify code</string>
    <string name="m159_please_verify_code">Please enter the verification code</string>
    <string name="m160_second_after_send">%ds second after send</string>
    <string name="m161_crop_image_menu_crop">Cropping</string>
    <string name="m162_pick_image_intent_chooser_title">Select source</string>
    <string name="m163_offpeak_tips">You have enabled off peak charging!</string>
    <string name="m164_start_charging">Start Charging</string>
    <string name="m165_reservation_charging">Charging Schedule</string>
    <string name="m166_save">Save</string>
    <string name="m167_enable">Enable</string>
    <string name="m168_keep_awake">Keep awake</string>
    <string name="m169_set_time">Set time</string>
    <string name="m170_not_empty">Content cannot be empty</string>
    <string name="m171_offpeak">Off-peak charging</string>
    <string name="m172_connect_ev">Connect EV</string>
    <string name="m174_authentication">Require Authentication</string>
    <string name="m176_auth_tips">Note: \nWhen this option is enabled, you will be asked to confirm in the APP to start charging
after plug in your car。 \n\n When this option is disabled, the charging will commence without further
confirmation after plug in your car。</string>
    <string name="m177_authorized_user">Authorized user</string>
</resources>