<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <com.shuoxd.lib.view.StatusBarHeightView
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />


    <com.shuoxd.charge.view.TitleBarLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showRightText="false"
        app:rightText="@string/m166_save"
        app:titleText="@string/m165_reservation_charging" />


    <com.shuoxd.charge.view.CheckItemView
        android:id="@+id/item_auth"
        android:layout_marginTop="@dimen/dp_10"
        app:checkTitle="@string/m174_authentication"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:padding="@dimen/dp_5"
        android:text="@string/m176_auth_tips"
        android:textColor="@color/color_text_99"
        android:textSize="@dimen/size_content_sp_14" />



    <Button
        android:id="@+id/bt_add"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/selector_button_rect"
        android:text="@string/m18_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/size_content_sp_12" />


</LinearLayout>