<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.shuoxd.lib.view.StatusBarHeightView
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />


    <com.shuoxd.charge.view.TitleBarLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rightText="@string/m166_save"
        app:showRightText="true"
        app:titleText="@string/m165_reservation_charging" />

    <com.shuoxd.charge.view.CheckItemView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        app:checkTitle="@string/m167_enable"
        android:layout_marginTop="@dimen/dp_10" />


    <com.shuoxd.charge.view.CheckItemView
        android:id="@+id/keepAwakeStatus"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_1"
        app:checkTitle="@string/m168_keep_awake" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_time_list"
        android:layout_marginTop="@dimen/dp_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_add"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/selector_button_rect"
        android:text="@string/m114_add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/size_content_sp_12" />

</LinearLayout>