<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.shuoxd.lib.view.StatusBarHeightView
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />


    <com.shuoxd.charge.view.TitleBarLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/status_bar"
        app:titleText="@string/m111_help_support" />


    <com.shuoxd.charge.view.PersonalView
        android:id="@+id/support_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_10"
        app:personinfo="@string/m143_support_email" />


    <com.shuoxd.charge.view.PersonalView
        android:id="@+id/support_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_1"
        app:personinfo="@string/m144_support_phone" />


    <com.shuoxd.charge.view.PersonalView
        android:id="@+id/support_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_1"
        app:personinfo="@string/m145_support_time" />


    <TextView
        android:id="@+id/tv_feekback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/white"
        android:padding="@dimen/dp_15"
        android:text="@string/m146_feedback"
        android:textSize="@dimen/size_content_sp_14"
        android:textStyle="bold"
        android:visibility="gone" />


</LinearLayout>