<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.shuoxd.lib.view.StatusBarHeightView
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />


    <com.shuoxd.charge.view.TitleBarLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/status_bar"
        app:titleText="@string/m110_personal_info" />


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:src="@drawable/big_user"
        app:round="@dimen/dp_40" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.shuoxd.charge.view.SettingItemView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                app:itemName="@string/m153_email"
                app:showLeftIcon="false"
                app:showRightIcon="false"
                app:showSubName="true" />


            <com.shuoxd.charge.view.SettingItemView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_1"
                app:itemName="@string/m139_change_password"
                app:showLeftIcon="false"
                app:showRightIcon="false"
                app:showSubName="true" />


            <com.shuoxd.charge.view.SettingItemView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_1"
                app:itemName="@string/m9_phone"
                app:showLeftIcon="false"
                app:showRightIcon="false"
                app:showSubName="true" />


            <com.shuoxd.charge.view.SettingItemView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_1"
                app:itemName="@string/m78_city"
                app:showLeftIcon="false"
                app:showRightIcon="false"
                app:showSubName="true" />


            <com.shuoxd.charge.view.SettingItemView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_1"
                app:itemName="@string/m79_country"
                app:showLeftIcon="false"
                app:showRightIcon="false"
                app:showSubName="true" />


        </LinearLayout>


    </ScrollView>


    <Button
        android:id="@+id/bt_done"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="@dimen/dp_50"
        android:background="@drawable/selector_button_rect"
        android:text="@string/m126_done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/size_content_sp_12" />


</LinearLayout>