<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.shuoxd.lib.view.StatusBarHeightView
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />


    <com.shuoxd.charge.view.TitleBarLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/status_bar"
        app:titleText="@string/m139_change_password" />


    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_margin="@dimen/dp_30"
        android:gravity="center"
        android:textSize="@dimen/size_content_sp_14"
        android:hint="@string/m150_old_password"
        android:background="@drawable/shape_stroke_gradient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registered" />


    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:gravity="center"
        android:textSize="@dimen/size_content_sp_14"
        android:hint="@string/m151_new_password"
        android:background="@drawable/shape_stroke_gradient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registered" />


    <EditText
        android:id="@+id/et_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_margin="@dimen/dp_30"
        android:gravity="center"
        android:textSize="@dimen/size_content_sp_14"
        android:hint="@string/m152_new_password_again"
        android:background="@drawable/shape_stroke_gradient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registered" />


    <Button
        android:id="@+id/bt_done"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/selector_button_rect"
        android:text="@string/m126_done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/size_content_sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sn" />

</LinearLayout>