<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.shuoxd.lib.view.StatusBarHeightView
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />


    <com.shuoxd.charge.view.TitleBarLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/m109_authorize" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:padding="@dimen/dp_5"
        android:text="@string/m7_username"
        android:textColor="@color/color_text_66"
        android:textSize="@dimen/size_title_bar" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:padding="@dimen/dp_5"
        android:text="@string/m136_choose"
        android:textColor="@color/color_text_33"
        android:textSize="@dimen/size_content_sp_14" />


    <TextView
        android:id="@+id/tv_charge_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@drawable/setting_layer"
        android:gravity="center"
        android:hint="@string/m136_choose"
        android:padding="@dimen/dp_5"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/size_content_sp_14" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:padding="@dimen/dp_5"
        android:text="@string/m177_authorized_user"
        android:textColor="@color/color_text_33"
        android:textSize="@dimen/size_content_sp_14" />


    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@drawable/shape_stroke_gradient"
        android:gravity="center" />


    <Button
        android:id="@+id/bt_add"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/selector_button_rect"
        android:text="@string/m18_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/size_content_sp_12" />


</LinearLayout>