<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/default_dialog_background"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context="com.shuoxd.charge.view.dialog.AlertDialog">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        tools:text="标题"
        android:textSize="@dimen/size_content_sp_12"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        tools:text="@string/m26_privacy_dialog_content"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray_eeeeeee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:orientation="horizontal"
        android:paddingBottom="5dp">



        <TextView
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/m16_cancel"
            android:layout_weight="1"
            android:textColor="@color/color_text_66" />

        <View
            android:layout_width="@dimen/dp_1"
            android:background="@color/gray_eeeeeee"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/bt_confirm"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/m18_confirm"
            android:textColor="@color/color_app_main_pressed" />

    </LinearLayout>

</LinearLayout>